<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_guest">

    <fragment
        android:id="@+id/nav_guest"
        android:name="com.example.vinilos.ui.fragments.GuestFragment"
        android:label="@string/menu_guest"
        tools:layout="@layout/fragment_guest" >
        <action
            android:id="@+id/action_nav_guest_to_nav_albums"
            app:destination="@id/nav_albums" />
        <action
            android:id="@+id/action_nav_guest_to_nav_artists"
            app:destination="@id/nav_artists" />
        <action
            android:id="@+id/action_nav_guest_to_nav_collectors"
            app:destination="@id/nav_collectors" />
        <action
            android:id="@+id/action_nav_guest_to_nav_collector_landing"
            app:destination="@id/nav_collector_landing" />
    </fragment>

    <fragment
        android:id="@+id/nav_collector_landing"
        android:name="com.example.vinilos.ui.fragments.CollectorLandingFragment"
        android:label="@string/collector"
        tools:layout="@layout/fragment_collector_landing" >
        <action
            android:id="@+id/action_nav_collector_landing_to_nav_albums"
            app:destination="@id/nav_albums" />
        <action
            android:id="@+id/action_nav_collector_landing_to_nav_artists"
            app:destination="@id/nav_artists" />
        <action
            android:id="@+id/action_nav_collector_landing_to_nav_collectors"
            app:destination="@id/nav_collectors" />
    </fragment>

    <fragment
        android:id="@+id/nav_artists"
        android:name="com.example.vinilos.ui.fragments.ArtistsFragment"
        android:label="@string/menu_artists"
        tools:layout="@layout/fragment_artists" >
        <action
            android:id="@+id/action_artistFragment_to_ArtistDetailsFragment"
            app:destination="@id/nav_artist_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_albums"
        android:name="com.example.vinilos.ui.fragments.AlbumsFragment"
        android:label="@string/menu_albums"
        tools:layout="@layout/fragment_albums">
        <action
            android:id="@+id/action_nav_albums_to_albumDetail"
            app:destination="@id/albumDetail" />
        <action
            android:id="@+id/action_nav_albums_to_albumCreate"
            app:destination="@id/albumCreate" />
    </fragment>
    <fragment
        android:id="@+id/albumCreate"
        android:name="com.example.vinilos.ui.fragments.AlbumCreateFragment"
        android:label="@string/create_album"
        tools:layout="@layout/fragment_album_create" >
        <action
            android:id="@+id/action_albumCreate_to_nav_albums"
            app:destination="@id/nav_albums" />
    </fragment>
    <fragment
        android:id="@+id/albumDetail"
        android:name="com.example.vinilos.ui.fragments.AlbumFragment"
        android:label="@string/album"
        tools:layout="@layout/fragment_album">
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_albumDetail_to_albumTrack"
            app:destination="@id/albumTrack" />
    </fragment>
    <fragment
        android:id="@+id/nav_collectors"
        android:name="com.example.vinilos.ui.fragments.CollectorsFragment"
        android:label="@string/menu_collectors"
        tools:layout="@layout/fragment_collectors" >
        <action
            android:id="@+id/action_nav_collectors_to_collectorDetail"
            app:destination="@id/collectorDetail" />
    </fragment>
    <fragment
        android:id="@+id/collectorDetail"
        android:name="com.example.vinilos.ui.fragments.CollectorFragment"
        android:label="@string/collector"
        tools:layout="@layout/fragment_collector">
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/nav_artist_detail"
        android:name="com.example.vinilos.ui.fragments.ArtistDetailsFragment"
        android:label="@string/menu_artists"
        tools:layout="@layout/fragment_artist_details" >
        <argument
            android:name="content"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/albumTrack"
        android:name="com.example.vinilos.ui.fragments.AlbumTrackFragment"
        android:label="@string/link_track"
        tools:layout="@layout/fragment_album_track" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_albumTrack_to_albumDetail"
            app:destination="@id/albumDetail" />
    </fragment>

</navigation>