<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/LinkTrackLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8sp"
            android:text="@string/link_track"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/trackNameField"
            android:layout_width="366dp"
            android:layout_height="50dp"
            android:layout_margin="8sp"
            android:ems="10"
            android:hint="@string/track_name"
            android:textColorHint="#757575"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinkTrackLabel" />

        <EditText
            android:id="@+id/trackDurationField"
            android:layout_width="366dp"
            android:layout_height="50dp"
            android:layout_margin="8sp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/track_duration"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trackNameField"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/createTrackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/link"
            android:textColor="#4E342E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trackDurationField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>