<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_main"
    android:theme="@style/ThemeOverlay.Vinilos.FullscreenContainer"
    tools:context=".EntranceActivity"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="341dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_vinilos_1"
        tools:layout_conversion_absoluteHeight="387dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <Button
        android:id="@+id/collector_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:elevation="5dp"
        android:insetLeft="20dp"
        android:insetRight="20dp"
        android:padding="20dp"
        android:text="@string/collector"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guest_button"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_conversion_absoluteHeight="79dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <Button
        android:id="@+id/guest_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="380dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:elevation="5dp"
        android:insetLeft="20dp"
        android:insetRight="20dp"
        android:padding="20dp"
        android:text="@string/guest"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_conversion_absoluteHeight="79dp"
        tools:layout_conversion_absoluteWidth="411dp" />

</androidx.constraintlayout.widget.ConstraintLayout>